testsuite/tests/dependent/should_fail/T15076b.stderr

T15076b.hs:8:8: error:
    • Skolem escape leads to quantification failure.
      When quantifying this type:
        forall a1 (f :: forall (x :: a1). Proxy @{a1} x -> *).
        Proxy @{Proxy @{a1} x0 -> *} (f @x0) -> ()
      these skolems would escape:
        a
      if we quantified this variable:
        (x0 :: a)
      (Indeed, I struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the type signature:
        foo :: forall (a :: Type) (f :: forall (x :: a). Proxy x -> Type).
               Proxy f -> ()
